<resources>
    <string name="app_name">Dukaan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="edit_business_details">Edit business details</string>
    <string name="share_dukaan_app">Share Dukaan App</string>
    <string name="get_your_own_app">Get your own App</string>
    <string name="change_langauge">Change Langauge</string>
    <string name="whatsapp_chat_support">WhatsApp Chat Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="get_yor_own_app">Get your own App</string>
    <string name="download_your_store">Download your store</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="tamil">தமிழ்</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="save_changes">Save Changes</string>
    <string name="marathi">मराठी</string>
    <string name="help_other_businesses">Help other businesses</string>
    <string name="share">Share</string>
    <string name="update_store_logo">Update store logo</string>
    <string name="store_link">Store Link</string>
    <string name="your_business_name">your business name</string>
    <string name="business_name">Business Name</string>
    <string name="your_business_category">your business category</string>
    <string name="business_category_text">Business Category</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>

    <string name="start">Start</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_otp">Enter otp</string>
    <string name="store_setup_is_completed">Store setup is completed</string>
    <string name="find_following_steps_to_unlock_features">Find following steps to unlock features</string>
    <string name="create_store">Create store</string>
    <string name="business_categories">Business categories</string>

    <string name="catalogue">Catalogue</string>
    <string name="add_new_product">Add new product</string>
    <string name="add_new_category">Add new category</string>
    <string name="product_name_add_product">Product Name *</string>
    <string name="product_name">Product Name *</string>
    <string name="product_category">Product Category *</string>
    <string name="mrp">MRP *</string>
    <string name="selling_price">Selling Price *</string>
    <string name="quantity">Quantity *</string>
    <string name="unit">Unit *</string>
    <string name="add_product">Add Product</string>
    <string name="category_name">Category Name</string>
    <string name="add_category">Add Category</string>
    <string name="search">Search</string>
    <string name="launch_your_own_online_store_in_just_30seconds_for_free">Launch your own online store in just 30 seconds for free</string>
</resources>