<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ChangeLanguage">


    <LinearLayout
        android:id="@+id/TopLL3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:background="@color/blue_bg"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/change_language"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_20"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopLL3">

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/rbHindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/hindi"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/rbMarathi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/marathi"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/rbTamil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/tamil"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <RadioButton
            android:id="@+id/rbKannada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/kannada"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />
    </RadioGroup>


    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_30"
        android:background="@color/blue_bg"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/save_changes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>