<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.EditBusinessDetails">

    <LinearLayout
        android:id="@+id/TopLL4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:background="@color/blue_bg"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:fontFamily="@font/galano_grotesque"
            android:text="@string/edit_business_details"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />
    </LinearLayout>


    <ImageView
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_10"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/View1"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/white_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopLL4" />

    <ImageView
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_60"
        android:src="@drawable/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TopLL4" />

    <TextView
        android:id="@+id/tvUpdateLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:fontFamily="@font/galano_grotesque"
        android:text="@string/update_store_logo"
        android:textColor="@color/blue_bg"
        android:textSize="@dimen/sp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/View1" />


    <TextView
        android:id="@+id/tvStoreLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:fontFamily="@font/galano_grotesque"
        android:text="@string/store_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUpdateLogo" />

    <TextView
        android:id="@+id/tvLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:fontFamily="@font/galano_grotesque"
        android:text="mydukaan.io/"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStoreLink" />

    <EditText
        android:id="@+id/etBusinessNameLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/galano_grotesque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLink"
        app:layout_constraintTop_toBottomOf="@id/tvStoreLink" />

    <TextView
        android:id="@+id/tvBusinessName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:fontFamily="@font/galano_grotesque"
        android:text="@string/business_name"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLink" />

    <EditText
        android:id="@+id/etBusinessNameDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:fontFamily="@font/galano_grotesque"
        android:hint="@string/your_business_name"
        app:layout_constraintTop_toBottomOf="@id/tvBusinessName" />


    <TextView
        android:id="@+id/tvBusinessCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:fontFamily="@font/galano_grotesque"
        android:text="@string/business_category_text"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBusinessNameDetails" />

    <EditText
        android:id="@+id/etBusinessCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:fontFamily="@font/galano_grotesque"
        android:hint="@string/your_business_category"
        app:layout_constraintTop_toBottomOf="@id/tvBusinessCategory" />


    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:fontFamily="@font/galano_grotesque"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBusinessCategory" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:focusable="false"
        android:fontFamily="@font/galano_grotesque"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:text="+91 9923762295"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber" />


    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:fontFamily="@font/galano_grotesque"
        android:hint="@string/address"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />

    <Button
        android:id="@+id/btnSaveBusiness"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/dp_10"
        android:layout_weight="1"
        android:background="@drawable/all_blue"
        android:fontFamily="@font/galano_grotesque"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>