<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddProductDetailsActivity">

    <TextView
        android:id="@+id/topBarEditProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_top"
        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
        android:gravity="center"
        android:padding="15dp"
        android:text="Edit Product"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAddImageEditProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarEditProduct">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_camera" />

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/ivProductImageEditProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@id/cvAddImageEditProduct"
        app:layout_constraintTop_toBottomOf="@id/topBarEditProduct" />

    <EditText
        android:id="@+id/etProductNameEditProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/product_name"
        app:layout_constraintBottom_toTopOf="@id/etProductCategoryEditProduct"
        app:layout_constraintTop_toBottomOf="@id/cvAddImageEditProduct" />

    <EditText
        android:id="@+id/etProductCategoryEditProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/product_category"
        app:layout_constraintBottom_toTopOf="@id/llMrpEditProduct"
        app:layout_constraintTop_toBottomOf="@id/etProductNameEditProduct" />


    <LinearLayout
        android:id="@+id/llMrpEditProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@id/llQuantityEditProduct"
        app:layout_constraintTop_toBottomOf="@id/etProductCategoryEditProduct">

        <EditText
            android:id="@+id/etMrpEditProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mrp"
            android:inputType="number" />

        <EditText
            android:id="@+id/etSellingPriceEditProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/selling_price"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llQuantityEditProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@id/etProductDetailsEditProduct"
        app:layout_constraintTop_toBottomOf="@id/llMrpEditProduct">

        <EditText
            android:id="@+id/etQuantityEditProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/quantity"
            android:inputType="number" />

        <EditText
            android:id="@+id/etUnitEditProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/unit" />

    </LinearLayout>

    <EditText
        android:id="@+id/etProductDetailsEditProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/product_category"
        app:layout_constraintBottom_toTopOf="@id/cvBtnUpdateEditProduct"
        app:layout_constraintTop_toBottomOf="@id/llQuantityEditProduct" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBtnUpdateEditProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/custom_top"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAddProductEditProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_on_background_disabled"
            android:text="Update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>