<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.GetYourOwnApp">


    <LinearLayout
        android:id="@+id/TopLL2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:background="@color/blue_bg"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/get_yor_own_app"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />
    </LinearLayout>


    <ImageView
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_20"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/LadiesImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_230"
        android:scaleType="fitXY"
        android:src="@drawable/ladies"
        app:layout_constraintTop_toBottomOf="@id/TopLL2" />


    <TextView
        android:id="@+id/tvBoldGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/get_your_own_app"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LadiesImage" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/sp_30"
        android:gravity="center"
        android:text="You can now download and share your \n store's APK file with your customers \n so they can shop from \n your store directly"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBoldGet" />


    <Button
        android:id="@+id/btnDownloadApp"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_30"
        android:background="@color/blue_bg"
        android:text="@string/download_your_store"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>