<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ShareDukaanApp">

    <LinearLayout
        android:id="@+id/TopLL3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:background="@color/blue_bg"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/share_dukaan_app"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold" />
    </LinearLayout>


    <ImageView
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_20"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_250"
        android:scaleType="fitXY"
        android:src="@drawable/banner_seller"
        app:layout_constraintTop_toBottomOf="@id/TopLL3" />

    <TextView
        android:id="@+id/tvHelpOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/help_other_businesses"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBanner" />


    <TextView
        android:id="@+id/tvDetails2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/sp_30"
        android:gravity="center"
        android:text="Share Dukaan app with your friends \n or family and help them digitize their \n business using Dukaan app."
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHelpOther" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnShareApp"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/blue_stroke"
            android:drawableLeft="@drawable/ic_share"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/blue_bg" />

        <Button
            android:id="@+id/btnShareApk"
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/all_blue"
            android:drawableLeft="@drawable/ic_whatsapp_white"
            android:text="Share APK"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>